# staticServer

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.nginx  Makefile  README.md  conf.txt  curl.sh  nginx.conf
DOCUMENT_ROOT/: index.html
include/: handler.h  net.h  server.h  usecase.h  utils.h
include/delivery/: contentType.h  request.h  response.h  responseCodes.h
nginx/: Dockerfile  nginx.conf
src/: handler.cpp  main.cpp  net.cpp  server.cpp  utils.cpp
src/delivery/: request.cpp  response.cpp
